{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 34,
  "lineage": "a24b7811-839a-79c7-325f-b3ead802fa25",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-087e084a36ea60238",
            "owner_id": "737362253087",
            "tags": {
              "Name": "csye6225-IGW"
            },
            "vpc_id": "vpc-017611b91cb23edab"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-087e084a36ea60238",
            "id": "r-rtb-0c04fb7d542e27fe71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c04fb7d542e27fe7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c04fb7d542e27fe7",
            "owner_id": "737362253087",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-087e084a36ea60238",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "csye6225-RT"
            },
            "vpc_id": "vpc-017611b91cb23edab"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737362253087:subnet/subnet-0dc3b4ba4897a3094",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0dc3b4ba4897a3094",
            "map_public_ip_on_launch": true,
            "owner_id": "737362253087",
            "tags": {
              "Name": "csye6225-subnet"
            },
            "vpc_id": "vpc-017611b91cb23edab"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737362253087:subnet/subnet-05b58d82f198c62d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-05b58d82f198c62d8",
            "map_public_ip_on_launch": true,
            "owner_id": "737362253087",
            "tags": {
              "Name": "csye6225-subnet2"
            },
            "vpc_id": "vpc-017611b91cb23edab"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737362253087:subnet/subnet-078967f879e52a52b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-078967f879e52a52b",
            "map_public_ip_on_launch": true,
            "owner_id": "737362253087",
            "tags": {
              "Name": "csye6225-subnet3"
            },
            "vpc_id": "vpc-017611b91cb23edab"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737362253087:vpc/vpc-017611b91cb23edab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00ed75fda12239c0a",
            "default_route_table_id": "rtb-02034737d64c4e733",
            "default_security_group_id": "sg-049ad1ec79c299b08",
            "dhcp_options_id": "dopt-042de39504f533c04",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": true,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-017611b91cb23edab",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02034737d64c4e733",
            "owner_id": "737362253087",
            "tags": {
              "Name": "csye6225-vpc"
            }
          }
        }
      ]
    }
  ]
}